# MyProject

./: CMakeLists.txt  Changelog.md  GameFactory.cpp  GameFactory.h  README.md  README.txt  main.cpp
ApplicationManager/: GameManager.cpp  GameManager.h
Game/: .directory  GameBase.cpp  GameBase.h  IGame.cpp  IGame.h  onePlayerGame.cpp  onePlayerGame.h  twoPlayerGame.cpp  twoPlayerGame.h
Game/public/: GameBase.cpp  GameBase.h  GameFactory.h  IGame.h
Game/src/: GameFactory.cpp  onePlayerGame.cpp  onePlayerGame.h  twoPlayerGame.cpp  twoPlayerGame.h
Gui/: GameGridView.cpp  GameGridView.h  IGameView.cpp  IGameView.h
Gui/DialogUI/: DialogMessage.cpp  DialogMessage.h  MyDialog.cpp  MyDialog.h
Gui/Widget/: CellGraphicItem.cpp  CellGraphicItem.h  ICellItem.cpp  ICellItem.h
Gui/Widget/Decorators/: DecoratorBase.cpp  DecoratorBase.h  ICellDecorator.h  RectDecorator.cpp  RectDecorator.h  RoundedRectDecorator.cpp  RoundedRectDecorator.h
StruttureDati/: cella.cpp  cella.h  griglia.cpp  griglia.h  simboli.cpp  simboli.h
Utils/: GameCache.cpp  GameCache.h  Readme.md  readUtility.cpp  readUtility.h
docs/: AcquisizioneFotoDocumentoCartaceo.md  AcquisizioneSelfie.md  CatturaImmagineDocumento.md  FacilityAcquisizioneFotoDati.md  FacilityAcquisizioneFotoVideoDati.md  FilePuntato.md  FunzionalitaFramework.md  GestionePersistenza.md  InizializzazioneFramework.md  LetturaMRZ.md  LetturaNFC.md  LetturaOCReNFC.md  ProceduraInstallazione.md  README.md  RegistrazioneVideo.md  ReleaseNotes.md  uploadDati.md
